# rust-messenger

./: Cargo.toml  README.md
examples/: bench.rs
examples/async/: config.rs  handlers.rs  main.rs  messages.rs  messenger.rs
examples/async_handlers/: config.rs  handlers.rs  main.rs  messages.rs
examples/connect_rust/: README.md  config.rs  handlers.rs  main.rs  messages.rs
examples/connect_rust/proto/: account.proto
examples/serde_bincode/: config.rs  handlers.rs  main.rs  messages.rs
examples/zero_copy/: config.rs  handlers.rs  main.rs  messages.rs
src/: lib.rs  macros.rs  messenger.rs  traits.rs
src/macros/: async_messenger.rs  messenger.rs  messenger_id_enum.rs  mod.rs
src/message_bus/: async_message_bus.rs  atomic_circular_bus.rs  circular_bus.rs  condvar_bus.rs  extending_bus.rs  mod.rs
src/mmap/: anonymous_mmap.rs  mod.rs
src/mmap/linux/: error.rs  extending_mmap.rs  mod.rs  option.rs
src/mmap/macos/: anonymous_mmap.rs  mod.rs
src/traits/: async_traits.rs  core.rs  extended.rs  mod.rs  zero_copy.rs
tests/: macro_hygiene.rs
