[package]
name = "rust-messenger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
libc = "0.2.155"

[dev-dependencies]
bincode = "*"
serde = { version = "*", features = ["derive"] }
tokio = { version = "*", features = [
    "rt-multi-thread",
    "sync",
    "io-util",
    "net",
] }
