[package]
name = "rust-messenger"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
libc = "0.2.172"

[dev-dependencies]
bincode = { version = "2.0.1", default-features = false, features = ["std", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = [
    "rt-multi-thread",
    "sync",
    "io-util",
    "net",
] }
